--- a/plausible/templates/deployments.yaml
+++ b/plausible/templates/deployments.yaml
@@ -37,6 +37,7 @@ spec:
         securityContext:
           runAsUser: 0
           runAsGroup: 0
+          allowPrivilegeEscalation: true
         envFrom:
           - configMapRef:
               name: plausible-config
